fix: add overflow container for tables

--- a/src/styles/_overrides.scss
+++ b/src/styles/_overrides.scss
@@ -159,3 +159,13 @@
   margin-left: 1.375rem;
   margin-top: 2.5rem;
 }
+
+//---------------------------------------
+// Data table
+//---------------------------------------
+
+.component-example__live--data-table {
+  overflow-x: auto;
+  padding: 0;
+  justify-content: flex-start;
+}
